--- a/app/src/main/res/layout/music_band_item.xml
+++ b/app/src/main/res/layout/music_band_item.xml
@@ -11,7 +11,7 @@
     app:cardCornerRadius="@dimen/half_grid_unit">
 
     <ImageView
-        android:id="@+id/cover"
+        android:id="@+id/thumbnail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="16:9"
@@ -32,7 +32,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cover"
+        app:layout_constraintTop_toBottomOf="@id/thumbnail"
         tools:text="Camel" />
 
     <TextView
